# retina_anveshan16

./: .gitignore  .gitmodules
Arduino_Codes/ArduinoToPiAnveshan/: ArduinoToPiAnveshan.ino
Arduino_Codes/anveshanBNO/: anveshanBNO.ino  stickBNO.ino
Arduino_Codes/boxBNO/: boxBNO.ino
Arduino_Codes/capTouch/: capTouch.ino
Arduino_Codes/gait/: gait.ino
Arduino_Codes/libraries/Adafruit_BNO055-master/: Adafruit_BNO055.cpp  Adafruit_BNO055.h
Arduino_Codes/stickBNO/: stickBNO.ino
Arduino_Codes/stickSONARtouch/: stickSONARtouch.ino
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/geometry_msgs/: Accel.h  AccelStamped.h  AccelWithCovariance.h  AccelWithCovarianceStamped.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  TwistWithCovarianceStamped.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
devel/include/navigation_api/: navigation_msg.h
devel/lib/pkgconfig/: geometry_msgs.pc  gps.pc  localization.pc  mainui.pc  navigation_api.pc  nrfcomm.pc  webdoda.pc
src/: .gitignore
src/communication/: CMakeLists.txt  package.xml  package.xml~
src/communication/launch/: comm.launch  comm.launch~  start.launch
src/communication/src/: README.md  boxbnonrfcomm.py  gpiotest.py  headingcorrection.py  leftnrfcomm.py  nfrcom.py.save  nrf24.py  nrf_rec.py  recvtest.py  rightnrfcomm.py  sticknrfcomm.py  totalnrfcomm.py
src/communication/src/oldCodes/: boxbnonrfcomm.py  nrf_rec.py  nrfsender.py~  rightnrfcomm.py  sticknrfcomm.py  txtest.py
src/gps/: CMakeLists.txt  package.xml
src/gps/src/: gps_publisher.py  publisher.py
src/kalman_implementation/: example.py  ros_kalman.py  ros_kalman.py.save
src/launch-stage1/: stageone.launch
src/localization/: CMakeLists.txt  package.xml  shubh.code
src/localization/src/: filtered_location.py  kalmanLocalization.py  (+1 more)
src/mainUI/: UI.py
src/mainui/: CMakeLists.txt  package.xml
src/navigation_api/: CMakeLists.txt  basic_code_navigation.py  navigation_tts_en.py  package.xml  readme.txt  troubleshoot.txt
src/navigation_api/launch/: navigation.launch
src/navigation_api/msg/: navigation_msg.msg
src/navigation_api/no_ros_api_codes/: basic_code_navigation.py~  navigation_stt_tts_en.py  stt_test.py  tester_bearing.py  tts_test.py
src/navigation_api/src/: headingcorrection.py  navigation_stt_tts_en.py  navigation_stt_tts_en.py~
src/sms_api/: danger_alert.py  send_custom_sms.py  send_sms.py  send_sms_script.py
src/webserver_test/: CMakeLists.txt  package.xml
src/webserver_test/src/: webserver.py  webserver_editor.py  webserver_editor.py.save  webserver_editor.py.save.1  webserver_editor.py~
webserverCodes/: doda.php  doda.php~  dodanew.php
(+47 files in other folders)
