<package>
<name>gpsdoda</name>
<version>6.6.6</version>
<description>GPS to find way into SATAN'S empire</description>
<maintainer email="satan@hell.inferno">pi</maintainer>
<license>DIO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>rospy</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>

<run_depend>rospy</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
</package>
