<package>
<name>webdoda</name>
<version>666.666.666</version>
<description>Server to find way into SATAN'S website</description>
<maintainer email="satan@hell.inferno">pi</maintainer>
<license>DIO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>rospy</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>navigation_api</build_depend>
<run_depend>rospy</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
<run_depend>navigation_api</run_depend>
</package>
